--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
-    "core-js": "^3.21.0",
+    "core-js": "^3.21.1",
+    "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
@@ -22,18 +23,20 @@
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^4.1.0",
+    "@types/bootstrap": "^5.1.9",
     "@types/chai": "^4.3.0",
+    "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "@vue/cli-plugin-babel": "~5.0.0-rc.3",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.3",
-    "@vue/cli-plugin-pwa": "~5.0.0-rc.3",
-    "@vue/cli-plugin-router": "~5.0.0-rc.3",
-    "@vue/cli-plugin-typescript": "~5.0.0-rc.3",
-    "@vue/cli-plugin-unit-mocha": "~5.0.0-rc.3",
-    "@vue/cli-plugin-vuex": "^5.0.0-rc.3",
-    "@vue/cli-service": "~5.0.0-rc.3",
+    "@vue/cli-plugin-babel": "~5.0.1",
+    "@vue/cli-plugin-eslint": "~5.0.1",
+    "@vue/cli-plugin-pwa": "~5.0.1",
+    "@vue/cli-plugin-router": "~5.0.1",
+    "@vue/cli-plugin-typescript": "~5.0.1",
+    "@vue/cli-plugin-unit-mocha": "~5.0.1",
+    "@vue/cli-plugin-vuex": "^5.0.1",
+    "@vue/cli-service": "~5.0.1",
     "@vue/compiler-sfc": "^3.2.31",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
